now is working with funcionario UI

--- a/src/main/java/com/management/UI/FuncionarioFormUI.form
+++ b/src/main/java/com/management/UI/FuncionarioFormUI.form
@@ -10,7 +10,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="9d9c8" class="javax.swing.JTextField" binding="nomeFuncionarioTextField">
+      <component id="9d9c8" class="javax.swing.JTextField" binding="tfNomeFuncionario">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -28,7 +28,7 @@
           <text value="confirmar"/>
         </properties>
       </component>
-      <component id="79b19" class="javax.swing.JTextField" binding="telefoneFuncionarioTextField">
+      <component id="79b19" class="javax.swing.JTextField" binding="tftelefoneFuncionario">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -36,7 +36,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="d3d3" class="javax.swing.JLabel" binding="telefoneFuncionario">
+      <component id="d3d3" class="javax.swing.JLabel" binding="lbTelefoneFuncionario">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -60,7 +60,7 @@
           <text value="Cargo funcionario"/>
         </properties>
       </component>
-      <component id="5caf0" class="javax.swing.JLabel" binding="nomeFuncionario">
+      <component id="5caf0" class="javax.swing.JLabel" binding="lbNomeFuncionario">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
