--- a/src/main/java/com/management/UI/FuncionarioListaUI.form
+++ b/src/main/java/com/management/UI/FuncionarioListaUI.form
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="826e3" class="javax.swing.JTable" binding="table1" default-binding="true">
+      <component id="9c07a" class="javax.swing.JTextArea" binding="txTextShow">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
