--- a/src/main/java/com/management/UI/FuncionarioFormUI.form
+++ b/src/main/java/com/management/UI/FuncionarioFormUI.form
@@ -44,7 +44,7 @@
           <text value="Telefone Funcionario"/>
         </properties>
       </component>
-      <component id="f03f8" class="javax.swing.JTextField" binding="cargoFuncionarioTextField">
+      <component id="f03f8" class="javax.swing.JTextField" binding="tfCargoFuncionario">
         <constraints>
           <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
