--- a/src/main/java/com/management/UI/PrincipalUI.form
+++ b/src/main/java/com/management/UI/PrincipalUI.form
@@ -11,7 +11,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <grid id="e402a" class="javax.swing.JMenuBar" binding="mbSistema" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="e402a" class="javax.swing.JMenuBar" binding="mbSistema" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
@@ -71,9 +71,33 @@
               </component>
             </children>
           </grid>
-          <hspacer id="45233">
+          <grid id="a38b0" class="javax.swing.JMenu" binding="mnUnidadeHospitalar" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <horizontalTextPosition value="11"/>
+              <text value="Unidade Hospitalar"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="86902" class="javax.swing.JMenuItem" binding="miCriarUnidade">
+                <constraints/>
+                <properties>
+                  <text value="Criar unidade hospitalar"/>
+                </properties>
+              </component>
+              <component id="f4fbe" class="javax.swing.JMenuItem" binding="miListarUnidades">
+                <constraints/>
+                <properties>
+                  <text value="Listar unidadades hospitalares"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <hspacer id="eb93e">
+            <constraints>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
         </children>
