--- a/src/main/java/com/management/UI/UnidadeHospitalar/UnidadeFormUI.form
+++ b/src/main/java/com/management/UI/UnidadeHospitalar/UnidadeFormUI.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <preferredSize width="250" height="250"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="a2bf8" class="javax.swing.JLabel" binding="labelNomeUnidade">
@@ -26,7 +28,7 @@
           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="aa457" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+      <component id="aa457" class="javax.swing.JTextField" binding="tfNomeUnidade">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
