--- a/src/main/java/com/management/UI/PrincipalUI.form
+++ b/src/main/java/com/management/UI/PrincipalUI.form
@@ -11,7 +11,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <grid id="e402a" class="javax.swing.JMenuBar" binding="mbSistema" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="e402a" class="javax.swing.JMenuBar" binding="mbSistema" layout-manager="GridLayoutManager" row-count="1" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
@@ -95,11 +95,52 @@
               </component>
             </children>
           </grid>
-          <hspacer id="eb93e">
+          <grid id="c2f30" class="javax.swing.JMenu" binding="mnQuarto" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
-              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
-          </hspacer>
+            <properties>
+              <text value="Quartos"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="bc0f7" class="javax.swing.JMenuItem" binding="miCriarQuarto">
+                <constraints/>
+                <properties>
+                  <text value="Criar Quarto"/>
+                </properties>
+              </component>
+              <component id="4d76" class="javax.swing.JMenuItem" binding="miListarQuarto">
+                <constraints/>
+                <properties>
+                  <text value="Lista de quartos"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <grid id="15d3b" class="javax.swing.JMenu" binding="mnLeitos" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+            <constraints>
+              <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Leitos"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="9ba8d" class="javax.swing.JMenuItem" binding="miCriarLeito">
+                <constraints/>
+                <properties>
+                  <text value="Criar novo Leito"/>
+                </properties>
+              </component>
+              <component id="7839a" class="javax.swing.JMenuItem" binding="miListaLeitos">
+                <constraints/>
+                <properties>
+                  <text value="Lista de todos Leitos"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
         </children>
       </grid>
     </children>
