--- a/src/main/java/com/management/UI/PrincipalUI.form
+++ b/src/main/java/com/management/UI/PrincipalUI.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="620" height="497"/>
     </constraints>
     <properties>
       <preferredSize width="600" height="600"/>
@@ -11,7 +11,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <grid id="e402a" class="javax.swing.JMenuBar" binding="mbSistema" layout-manager="GridLayoutManager" row-count="1" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="e402a" class="javax.swing.JMenuBar" binding="mbSistema" layout-manager="GridLayoutManager" row-count="1" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
@@ -137,6 +137,47 @@
                 <constraints/>
                 <properties>
                   <text value="Lista de todos Leitos"/>
+                </properties>
+              </component>
+              <component id="7e6bd" class="javax.swing.JMenuItem" binding="miListaEquipamentos">
+                <constraints/>
+                <properties>
+                  <text value="Lista de equipamentos"/>
+                </properties>
+              </component>
+              <component id="e3b38" class="javax.swing.JMenuItem" binding="miCadastrarEquipamento">
+                <constraints/>
+                <properties>
+                  <text value="Cadastrar novos Equipamentos"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <grid id="d719c" class="javax.swing.JMenu" binding="mnPacientes" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+            <constraints>
+              <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Pacientes"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="dae3b" class="javax.swing.JMenuItem" binding="miCadastrarPaciente">
+                <constraints/>
+                <properties>
+                  <text value="Cadastrar Paciente"/>
+                </properties>
+              </component>
+              <component id="44482" class="javax.swing.JMenuItem" binding="miListaPaciente">
+                <constraints/>
+                <properties>
+                  <text value="Lista de Pacientes"/>
+                </properties>
+              </component>
+              <component id="92a36" class="javax.swing.JMenuItem" binding="miLeitoAddPaciente">
+                <constraints/>
+                <properties>
+                  <text value="Alocar paciente em leito"/>
                 </properties>
               </component>
             </children>
