--- a/src/main/java/com/management/UI/Equipamento/EquipamentoFormUI.form
+++ b/src/main/java/com/management/UI/Equipamento/EquipamentoFormUI.form
@@ -16,13 +16,15 @@
           <text value="Nome Equipamento"/>
         </properties>
       </component>
-      <component id="d096f" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+      <component id="d096f" class="javax.swing.JTextField" binding="txNomeEquipamento">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <text value=""/>
+        </properties>
       </component>
       <component id="61a15" class="javax.swing.JLabel">
         <constraints>
@@ -32,7 +34,7 @@
           <text value="Numero de Equipamentos"/>
         </properties>
       </component>
-      <component id="6cb7a" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+      <component id="6cb7a" class="javax.swing.JTextField" binding="txNumeroEquipamentos">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
