--- a/src/main/java/com/management/UI/Especialidade/EspecialidadeFormUi.form
+++ b/src/main/java/com/management/UI/Especialidade/EspecialidadeFormUi.form
@@ -16,7 +16,7 @@
           <text value="Nome do Especialista"/>
         </properties>
       </component>
-      <component id="5af37" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+      <component id="5af37" class="javax.swing.JTextField" binding="txNameEspec">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -42,7 +42,7 @@
           <text value="Identificação do Especialista"/>
         </properties>
       </component>
-      <component id="7b10a" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+      <component id="7b10a" class="javax.swing.JTextField" binding="txIdEspec">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
