--- a/src/main/java/com/management/UI/Paciente/PacienteFormUI.form
+++ b/src/main/java/com/management/UI/Paciente/PacienteFormUI.form
@@ -18,13 +18,15 @@
           <text value="Idade"/>
         </properties>
       </component>
-      <component id="186bc" class="javax.swing.JTextField" binding="idadeTextField">
+      <component id="186bc" class="javax.swing.JTextField" binding="txIdade">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <text value=""/>
+        </properties>
       </component>
       <component id="e3b9" class="javax.swing.JLabel">
         <constraints>
@@ -34,7 +36,7 @@
           <text value="Altura"/>
         </properties>
       </component>
-      <component id="7a563" class="javax.swing.JTextField" binding="AlturaTextField">
+      <component id="7a563" class="javax.swing.JTextField" binding="txAltura">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -52,13 +54,15 @@
           <text value="Peso"/>
         </properties>
       </component>
-      <component id="b13ce" class="javax.swing.JTextField" binding="PesoTextField">
+      <component id="b13ce" class="javax.swing.JTextField" binding="txPeso">
         <constraints>
           <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <text value=""/>
+        </properties>
       </component>
       <component id="cad81" class="javax.swing.JLabel">
         <constraints>
@@ -68,13 +72,15 @@
           <text value="Comorbidade"/>
         </properties>
       </component>
-      <component id="aee5" class="javax.swing.JTextField" binding="ComorbidadeTextField3">
+      <component id="aee5" class="javax.swing.JTextField" binding="txComorbidade">
         <constraints>
           <grid row="7" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <text value=""/>
+        </properties>
       </component>
       <hspacer id="8f936">
         <constraints>
@@ -94,7 +100,7 @@
           <text value="Diagnostico"/>
         </properties>
       </component>
-      <component id="50741" class="javax.swing.JTextField" binding="DiagnosticoTextField4">
+      <component id="50741" class="javax.swing.JTextField" binding="txDiagnostico">
         <constraints>
           <grid row="9" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -110,7 +116,7 @@
           <text value="Necessidade"/>
         </properties>
       </component>
-      <component id="45c86" class="javax.swing.JTextField" binding="NecessidadeTextField5">
+      <component id="45c86" class="javax.swing.JTextField" binding="txNecessidade">
         <constraints>
           <grid row="11" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -126,7 +132,7 @@
           <text value="Isolamento ?"/>
         </properties>
       </component>
-      <component id="3fdda" class="javax.swing.JCheckBox" binding="IsolamentocheckBox">
+      <component id="3fdda" class="javax.swing.JCheckBox" binding="cbIsomalento">
         <constraints>
           <grid row="12" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -134,7 +140,7 @@
           <text value=""/>
         </properties>
       </component>
-      <component id="70f21" class="javax.swing.JButton" binding="btnConfirmar">
+      <component id="70f21" class="javax.swing.JButton" binding="btConfirmar">
         <constraints>
           <grid row="13" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
