--- a/src/main/java/com/management/UI/UnidadeHospitalar/UnidadeFormularioUI.form
+++ b/src/main/java/com/management/UI/UnidadeHospitalar/UnidadeFormularioUI.form
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.management.UI.UnidadeHospitalar.UnidadeFormUI">
-  <grid id="27dc6" binding="mainPanel" custom-create="true" layout-manager="GridLayoutManager" row-count="7" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.management.UI.UnidadeHospitalar.UnidadeFormularioUI">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="7" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties>
-      <preferredSize width="250" height="250"/>
-    </properties>
+    <properties/>
     <border type="none"/>
     <children>
-      <component id="a2bf8" class="javax.swing.JLabel" binding="labelNomeUnidade">
+      <component id="84ffb" class="javax.swing.JLabel" binding="labelUnidade">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -18,17 +16,17 @@
           <text value="Nome Unidade Hospitalar"/>
         </properties>
       </component>
-      <hspacer id="7917a">
+      <hspacer id="a4b8">
         <constraints>
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <vspacer id="1bb45">
+      <vspacer id="49709">
         <constraints>
           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="aa457" class="javax.swing.JTextField" binding="tfNomeUnidade">
+      <component id="1f538" class="javax.swing.JTextField" binding="tfNomeUnidade">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -36,7 +34,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="23743" class="javax.swing.JLabel" binding="labelEspecialidade">
+      <component id="d2f95" class="javax.swing.JLabel" binding="labelEspecialidade">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -44,26 +42,26 @@
           <text value="Especialidade"/>
         </properties>
       </component>
-      <component id="17cb4" class="javax.swing.JComboBox" binding="cbEspecialidades">
+      <component id="2287" class="javax.swing.JComboBox" binding="cbEspecialidades">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
-      <component id="c065f" class="javax.swing.JButton" binding="salvarButton" default-binding="true">
+      <component id="e8eb7" class="javax.swing.JButton" binding="salvarButton">
         <constraints>
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="salvar"/>
+          <text value="Salvar"/>
         </properties>
       </component>
-      <hspacer id="d32">
+      <hspacer id="cd46c">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <vspacer id="9c25">
+      <vspacer id="9d67">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
